change template vote format

--- a/osuka.jinja
+++ b/osuka.jinja
@@ -6,19 +6,19 @@
 
 {%- if no_execution | length %}
 [list]
-[*][b]no execution[/b] ({{ no_execution['vote_strings'] | length }}{{', NE-'+(hammer_count - (no_execution['vote_strings'] | length)) | string if hammer_count - (no_execution['vote_strings'] | length) < 4 else ''}}): {{ no_execution['vote_strings'] | join(', ') }}
+[*][b]no execution[/b] ({{ no_execution | length }}{{', NE-'+(hammer_count - (no_execution['votes'] | length)) | string if hammer_count - (no_execution['votes'] | length) < 4 else ''}}): {% for vote in no_execution %}{{ '[url=[' + vote['post_url'] + ']'+vote['voter'] + ' [size=75](' + vote['post_number'] + ')[/size][/url]' + (', ' if not loop.last else '') }}{%- endfor %}
 [/list]
 {%- endif %}
 [list]
 {%- for player in player_votes %}
 {%- if player['name'] %}
-{%- set player_votecount = player['vote_strings'] | length %}
-[*][b]{{ player['name'] }}[/b] ({{ player_votecount }}{{', E-'+(hammer_count - player_votecount) | string if hammer_count - player_votecount < 4 else ''}}): {{ player['vote_strings'] | join(', ') }}
+{%- set player_votecount = player['votes'] | length %}
+[*][b]{{ player['name'] }}[/b] ({{ player_votecount }}{{', E-'+(hammer_count - player_votecount) | string if hammer_count - player_votecount < 4 else ''}}): {% for vote in player['votes'] %}{{ '[url=[' + vote['post_url'] + ']'+vote['voter'] + ' [size=75](' + vote['post_number'] | string + ')[/size][/url]' + (', ' if not loop.last else '') }}{%- endfor %}
 {%- endif %}
 {%- endfor %}
 [/list]
 [list]
-[*][b]not voting[/b] ({{ not_voting['vote_strings'] | length }}): {{ not_voting['vote_strings'] | join(', ') }}
+[*][b]not voting[/b] ({{ not_voting | length }}): {% for vote in not_voting %}{{ '[url=[' + vote['post_url'] + ']'+vote['voter'] + ' [size=75](' + vote['post_number'] | string + ')[/size][/url]' + (', ' if not loop.last else '') }}{%- endfor %}
 [/list]
 
 with {{ player_count }} alive, it takes {{ hammer_count }} to execute.
