remove color arg in jinja template

--- a/osuka.jinja
+++ b/osuka.jinja
@@ -1,4 +1,4 @@
-[i][color=#{{color}}][size=150]votecount[/size]
+[i][color=#ff00ff][size=150]votecount[/size]
 [size=75]day 0, vc 0[/size]
 
 {%- set player_count = player_votes | length %}
